--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -128,11 +128,11 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <h2><strong>2025</strong></h2>
   
 <div class="publication-card">
-  <div class="conference-tag">ICLR 2025</div>
-  <p><a class="publication-link" href="https://iclr.cc/">Probe Pruning: Accelerating LLMs through Dynamic Pruning via Model-Probing.</a><br />Qi Le, Enmao Diao, Ziyan Wang, Xinran Wang, Jie Ding, Li Yang, Ali Anwar<br><em>The Thirteenth International Conference on Learning Representations (ICLR), 2025</em>
-  </br>
-  </p>
-  </div>
+<div class="conference-tag">ICLR 2025</div>
+<p><a class="publication-link" href="https://iclr.cc/">Probe Pruning: Accelerating LLMs through Dynamic Pruning via Model-Probing.</a><br />Qi Le, Enmao Diao, Ziyan Wang, Xinran Wang, Jie Ding, Li Yang, Ali Anwar<br><em>The Thirteenth International Conference on Learning Representations (ICLR), 2025</em>
+</br>
+</p>
+</div>
 
 <div class="publication-card">
 <div class="conference-tag">ICLR 2025</div>
@@ -178,35 +178,16 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 </div>
 
 
-
-<!--  
-
-<div class="publication-card">
-    <div class="conference-tag">arXiv'24</div>
-    <p>Everything You Always Wanted to Know About Storage Compressibility of Pre-Trained ML Models but Were Afraid to Ask.<br>Zhaoyuan Su, Ammar Ahmed, Zirui Wang, Ali Anwar, Yue Cheng<br><a class="publication-link" href="https://arxiv.org/pdf/2402.13429.pdf">arXiv:2402.13429</a></p>
-</div>
-  
-<div class="publication-card">
-    <div class="conference-tag">arXiv'24</div>
-    <p>Personalized Federated Learning Techniques: Empirical Analysis.<br>Azal Ahmad Khan, Ahmad Faraz Khan, Haider Ali, Ali Anwar<br><a class="publication-link" href="https://arxiv.org/pdf/2409.07631">arXiv:2409.06805</a></p>
-</div>
-
-
-<div class="publication-card">
-<div class="conference-tag">arXiv'24</div>
-<p>DynamicFL: Federated Learning with Dynamic Communication Resource Allocation.</a><br />Qi Le, Enmao Diao, Xinran Wang, Ahmad Faraz Khan, Vahid Tarokh, Jie Ding, and Ali Anwar<br><em>arXiv, 2024</em>
-</br>
-<a class="publication-icon" href="../files/DynamicFL.pdf"><i class="fas fa-file-pdf"></i></a>
-</p>
-</div>
--->
           
 
 <h2><strong>2022</strong></h2>
 
+
 <div class="publication-card">
     <div class="conference-tag">Asilomar 2022</div>
-    <p><a class="publication-link" href="https://www.asilomarsscconf.org/">Personalized Federated Recommender Systems with Private and Partially Federated AutoEncoders.</a><br />Qi Le, Enmao Diao, Xinran Wang, Ali Anwar, Vahid Tarokh, Jie Ding<br><em>To appear in the Proceedings of the Asilomar Conference on Signals, Systems, and Computers (Asilomar), 2022</em></p>
+    <p><a class="publication-link" href="https://www.asilomarsscconf.org/">Personalized Federated Recommender Systems with Private and Partially Federated AutoEncoders.</a><br />Qi Le, Enmao Diao, Xinran Wang, Ali Anwar, Vahid Tarokh, Jie Ding<br><em>To appear in the Proceedings of the Asilomar Conference on Signals, Systems, and Computers (Asilomar), 2022</em>
+</br>
+</p>
 </div>
 
 
