--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -129,21 +129,21 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
   
 <div class="publication-card">
 <div class="conference-tag">ICLR 2025</div>
-<p><a class="publication-link" href="https://iclr.cc/">Probe Pruning: Accelerating LLMs through Dynamic Pruning via Model-Probing.</a><br />Qi Le, Enmao Diao, Ziyan Wang, Xinran Wang, Jie Ding, Li Yang, Ali Anwar<br><em>The Thirteenth International Conference on Learning Representations (ICLR), 2025</em>
+<p><a class="publication-link" href="https://arxiv.org/abs/2502.15618">Probe Pruning: Accelerating LLMs through Dynamic Pruning via Model-Probing.</a><br />Qi Le, Enmao Diao, Ziyan Wang, Xinran Wang, Jie Ding, Li Yang, Ali Anwar<br><em>The Thirteenth International Conference on Learning Representations (ICLR), 2025</em>
 </br>
 </p>
 </div>
 
 <div class="publication-card">
 <div class="conference-tag">ICLR 2025</div>
-<p><a class="publication-link" href="https://iclr.cc/">MAP: Multi-Human-Value Alignment Palette.</a><br />Xinran Wang, Qi Le, Ammar Ahmed, Enmao Diao, Yi Zhou, Nathalie Baracaldo, Jie Ding, Ali Anwar<br><em>The Thirteenth International Conference on Learning Representations (ICLR), 2025 <br> [Oral Presentation]</em>
+<p><a class="publication-link" href="https://arxiv.org/abs/2410.19198">MAP: Multi-Human-Value Alignment Palette.</a><br />Xinran Wang, Qi Le, Ammar Ahmed, Enmao Diao, Yi Zhou, Nathalie Baracaldo, Jie Ding, Ali Anwar<br><em>The Thirteenth International Conference on Learning Representations (ICLR), 2025 <br> [Oral Presentation]</em>
 </br>
 </p>
 </div>
   
 
 <div class="publication-card">
-<div class="conference-tag">NAACL'25</div>
+<div class="conference-tag">NAACL 2025</div>
 <p><a class="publication-link" href="https://2025.naacl.org/">AID: Adaptive Integration of Detectors for Safe AI with Language Models.</a><br />Xinran Wang, Enmao Diao, Qi Le, Jie Ding, Ali Anwar<br><em>The 2025 Annual Conference of the Nations of the Americas Chapter of the ACL (NAACL), 2025 <br> [Main Conference]</em>
 </br>
 </p>
@@ -151,7 +151,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
   
 
 <div class="publication-card">
-<div class="conference-tag">IPDPS'25</div>
+<div class="conference-tag">IPDPS 2025</div>
 <p><a class="publication-link" href="https://www.ipdps.org/2025-announcements.html">IP-FL: Incentive-driven Personalization in Federated Learning.</a><br />Ahmad Khan, Xinran Wang, Qi Le, Zain ul Abdeen, Azal Ahmad Khan, Haider Ali, Ming Jin, Jie Ding, Ali R. Butt, Ali Anwar<br><em>The 39th IEEE International Parallel & Distributed Processing Symposium (IPDPS), 2025</em>
 </br>
 </p>
@@ -164,15 +164,14 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 
 <div class="publication-card">
 <div class="conference-tag">BigData 2024</div>
-<p><a class="publication-link" href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/">DynamicFL: Federated Learning with Dynamic Communication Resource Allocation.</a><br />Qi Le, Enmao Diao, Xinran Wang, Ahmad Faraz Khan, Vahid Tarokh, Jie Ding, and Ali Anwar<br><em>IEEE International Conference on Big Data (BigData), 2024 <br>[Best Student Paper Award]</em>
+<p><a class="publication-link" href="https://ieeexplore.ieee.org/abstract/document/10826074">DynamicFL: Federated Learning with Dynamic Communication Resource Allocation.</a><br />Qi Le, Enmao Diao, Xinran Wang, Ahmad Faraz Khan, Vahid Tarokh, Jie Ding, and Ali Anwar<br><em>IEEE International Conference on Big Data (BigData), 2024 <br>[Best Student Paper Award]</em>
 </br>
-<a class="publication-icon" href="../files/DynamicFL.pdf"><i class="fas fa-file-pdf"></i></a>
 </p>
 </div>
   
 <div class="publication-card">
 <div class="conference-tag">BigData 2024</div>
-<p><a class="publication-link" href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/">ICL: An Incentivized Collaborative Learning Framework.</a><br />Xinran Wang, Qi Le, Ahmad Khan, Jie Ding, and Ali Anwar<br><em>IEEE International Conference on Big Data (BigData), 2024</em>
+<p><a class="publication-link" href="https://ieeexplore.ieee.org/abstract/document/10825643">ICL: An Incentivized Collaborative Learning Framework.</a><br />Xinran Wang, Qi Le, Ahmad Khan, Jie Ding, and Ali Anwar<br><em>IEEE International Conference on Big Data (BigData), 2024</em>
 </br>
 </p>
 </div>
@@ -185,7 +184,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 
 <div class="publication-card">
     <div class="conference-tag">Asilomar 2022</div>
-    <p><a class="publication-link" href="https://www.asilomarsscconf.org/">Personalized Federated Recommender Systems with Private and Partially Federated AutoEncoders.</a><br />Qi Le, Enmao Diao, Xinran Wang, Ali Anwar, Vahid Tarokh, Jie Ding<br><em>To appear in the Proceedings of the Asilomar Conference on Signals, Systems, and Computers (Asilomar), 2022</em>
+    <p><a class="publication-link" href="https://ieeexplore.ieee.org/document/10051918">Personalized Federated Recommender Systems with Private and Partially Federated AutoEncoders.</a><br />Qi Le, Enmao Diao, Xinran Wang, Ali Anwar, Vahid Tarokh, Jie Ding<br><em>To appear in the Proceedings of the Asilomar Conference on Signals, Systems, and Computers (Asilomar), 2022</em>
 </br>
 </p>
 </div>
